--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "types": ["vitest/globals"],
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+  },
+  "include": ["src"]
 }
